--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>AI Gacha</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app" class="container mx-auto px-4 my-8">
+      <button class="btn btn-sky">Gacha</button>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
