Display rendered card in browser

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <input class="input" type="password" placeholder="Replicate API Token" data-gacha-target="token" data-action="gacha#configure" data-testid="token" />
         <button class="btn btn-sky" data-action="click->gacha#draw">Gacha</button>
       </div>
-      <div data-gacha-target="result" data-testid="result"></div>
+      <div>
+        <canvas data-gacha-target="card" width="448" height="640" data-testid="card"></canvas>
+        <div data-gacha-target="status" data-testid="status"></div>
+      </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
