--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <div id="app" class="container mx-auto px-4 my-8 space-y-4" data-controller="gacha">
-      <div>
+      <div class="font-cubic11">
         <input class="input" type="password" placeholder="Replicate API Token" data-gacha-target="token" data-action="gacha#configure" data-testid="token" />
         <button class="btn btn-sky" data-action="click->gacha#draw">Gacha</button>
       </div>
       <div>
         <canvas data-gacha-target="card" width="448" height="640" data-testid="card"></canvas>
-        <div data-gacha-target="status" data-testid="status"></div>
+        <div class="font-cubic11" data-gacha-target="status" data-testid="status"></div>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
