Refactor to move token to config controller

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>AI Gacha</title>
   </head>
   <body class="bg-zinc-900">
-    <div id="app" class="flex flex-col items-center container mx-auto px-4 my-16 space-y-8" data-controller="gacha">
+    <div id="app" class="flex flex-col items-center container mx-auto px-4 my-16 space-y-8" data-controller="gacha config" data-action="config:tokenChanged->gacha#setupClient">
       <div class="relative">
         <div class="absolute inset-x-0 inset-y-0 animate-expand">
           <div class="absolute top-0 inset-x-0 concern concern-top"></div>
@@ -16,7 +16,7 @@
         <div class="absolute top-1/2 left-0 right-0 text-center text-red-700 font-cubic11" data-gacha-target="status" data-testid="status">[CODE::INITIALIZE]</div>
       </div>
       <div class="font-cubic11">
-        <input class="input" type="password" placeholder="Replicate API Token" data-gacha-target="token" data-action="gacha#configure" data-testid="token" /><button class="btn btn-primary border-l-0" data-action="click->gacha#draw">製作</button>
+        <input class="input" type="password" placeholder="Replicate API Token" data-config-target="token" data-action="config#setToken" data-testid="token" /><button class="btn btn-primary border-l-0" data-action="click->gacha#draw">製作</button>
       </div>
     </div>
     <script type="module" src="/src/main.ts"></script>
