--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           <div class="absolute top-0 inset-x-0 concern concern-top"></div>
           <div class="absolute bottom-0 inset-x-0 concern concern-bottom"></div>
         </div>
-        <canvas class="bg-zinc-900" data-gacha-target="card" width="448" height="640" data-testid="card"></canvas>
+        <canvas class="bg-zinc-900" data-controller="card" data-gacha-target="subscriber" data-action="gacha:start->card#clear gacha:success->card#draw" width="448" height="640" data-testid="card"></canvas>
         <div class="absolute top-1/2 left-0 right-0 text-center text-red-700 font-cubic11" data-gacha-target="status" data-testid="status">[CODE::INITIALIZE]</div>
       </div>
       <div class="font-cubic11">
