--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Gacha</title>
   </head>
-  <body class="bg-zinc-900 font-cubic11">
-    <div id="app" class="flex flex-col items-center container mx-auto px-4 my-16 space-y-8" data-controller="gacha config" data-action="config:tokenChanged->gacha#setupClient">
+  <body class="text-red-700 bg-zinc-900 font-cubic11">
+    <main id="app" class="flex flex-col md:flex-row justify-center items-center container mx-auto px-4 my-16 space-y-8 md:space-x-8" data-controller="gacha config" data-action="config:tokenChanged->gacha#setupClient">
       <div class="relative">
         <div class="absolute inset-x-0 inset-y-0 animate-expand">
           <div class="absolute top-0 inset-x-0 concern concern-top"></div>
@@ -15,10 +15,23 @@
         <canvas class="bg-zinc-900" data-controller="card" data-gacha-target="subscriber" data-action="gacha:start->card#clear gacha:success->card#draw" width="448" height="640" data-testid="card"></canvas>
         <div class="absolute top-1/2 left-0 right-0 text-center text-red-700" data-controller="status" data-gacha-target="subscriber" data-action="gacha:start->status#start gacha:success->status#success gacha:failed->status#failed" data-testid="status">[CODE::INITIALIZE]</div>
       </div>
-      <div>
-        <input class="input" type="password" placeholder="Replicate API Token" data-config-target="token" data-action="config#setToken" data-testid="token" /><button class="btn btn-primary border-l-0" data-action="click->gacha#draw">製作</button>
-      </div>
-    </div>
+      <aside class="space-y-6">
+        <section class="space-y-2">
+          <h1>種族</h1><div class="space-x-2" data-config-target="attribute" data-config-type="race"></div>
+        </section>
+        <section class="space-y-2">
+          <h1>髮型</h1><div class="space-x-2" data-config-target="attribute" data-config-type="hairLength"></div>
+        </section>
+        <section class="space-y-2">
+          <h1>髮色</h1><div class="space-x-2" data-config-target="attribute" data-config-type="hairColor"></div>
+        </section>
+        <hr class="border-t border-red-900" />
+        <section class="flex">
+          <input class="input" type="password" placeholder="Replicate API Token" data-config-target="token" data-action="config#setToken" data-testid="token" />
+          <button class="btn btn-primary border-l-0" data-action="click->gacha#draw">製作</button>
+        </section>
+      </aside>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
