Add default options status

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>瞳色</h1><div class="space-x-2" data-config-target="attribute" data-config-type="eyeColor"></div>
           </section>
           <section class="space-y-2">
-            <h1>細化</h1><div class="space-x-2" data-config-target="attribute" data-config-type="hires"></div>
+            <h1>細化</h1><div class="space-x-2" data-config-target="attribute" data-config-type="isHires"></div>
           </section>
         </div>
         <hr class="my-8 border-t border-red-900" />
