Adjust text size

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       </div>
       <aside>
         <h1 class="mb-2 text-xl">概率</h1>
-        <p class="mb-4 text-red-800">產生的畫面會盡可能接近以下要素</p>
-        <div class="space-y-6">
+        <p class="mb-4 text-sm text-red-800">產生的畫面會盡可能接近以下要素</p>
+        <div class="space-y-6 text-sm">
           <section class="space-y-2">
             <h1>種族</h1><div data-config-target="attribute" data-config-type="race"></div>
           </section>
@@ -41,7 +41,7 @@
           <button class="btn btn-primary border-t-0 md:border-t md:border-l-0" data-gacha-target="drawButton" data-action="click->gacha#draw" disabled>製作</button>
           <button class="btn btn-primary border-t-0 md:border-t md:border-l-0" data-gacha-target="downloadButton" data-action="click->gacha#download" disabled>下載</button>
         </section>
-        <p class="mt-2 text-red-800">Pastel Mix 模型預設非商業使用，請使用 <a href="https://replicate.com/account" target="_blank" class="text-red-500 cursor-pointer">Replicate</a> 的 API Token 來運行，會被收取少量的運算費用。</p>
+        <p class="mt-2 text-sm text-red-800">Pastel Mix 模型預設非商業使用，請使用 <a href="https://replicate.com/account" target="_blank" class="text-red-500 cursor-pointer">Replicate</a> 的 API Token 來運行，會被收取少量的運算費用。</p>
       </aside>
     </main>
     <script type="module" src="/src/main.ts"></script>
