--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </main>
     <footer class="container mx-auto p-2 pb-6 text-center space-y-2">
       <div>原始碼位於 <a href="https://github.com/elct9620/ai-gacha" target="_blank" class="text-red-500">GitHub</a>，如果喜歡這個專案可以透過<a href="https://portaly.cc/aotoki/support" target="_blank" class="text-red-500">贊助</a>支持我</div>
-      <div>Powered by <a href="https://blog.aotoki.me" target="_blank" title="蒼時弦也"><img src="https://blog.aotoki.me/images/logo.svg" width="100" height="15" class="inline-block ml-2" alt="蒼時弦也" /></a></div>
+      <div>Powered by <a href="https://blog.aotoki.me" target="_blank" title="蒼時弦也"><img src="https://blog.aotoki.me/images/logo.svg" width="100" height="15" class="inline-block mx-2" alt="蒼時弦也" /></a> Model based on <a href="https://huggingface.co/andite/pastel-mix" target="_blank" class="text-red-500">Pastel Mix</a></div>
     </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
