--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <meta property="og:title" content="AI Gacha" />
+    <meta name="og:image" content="https://ai-gacha.aotoki.dev/thumbnail.png" />
+
+    <meta name="twitter:title" content="AI Gacha" />
+    <meta name="twitter:image" content="https://ai-gacha.aotoki.dev/thumbnail.png" />
+    <meta name="twitter:card" content="summary_large_image" />
     <title>AI Gacha</title>
   </head>
   <body class="text-red-700 bg-zinc-900 font-cubic11">
