Update page title

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:title" content="AI Gacha" />
     <meta name="twitter:image" content="https://ai-gacha.aotoki.dev/thumbnail.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <title>AI Gacha</title>
+    <title>AI Gacha - by 蒼時弦也</title>
   </head>
   <body class="text-red-700 bg-zinc-900 font-cubic11">
     <main id="app" class="flex flex-col md:flex-row justify-center items-center container mx-auto px-4 my-6 space-y-8 md:space-x-8" data-controller="gacha config" data-action="config:tokenChanged->gacha#setupClient">
