Update page description

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="twitter:image" content="https://ai-gacha.aotoki.dev/thumbnail.png" />
     <meta name="twitter:card" content="summary_large_image" />
     <title>AI Gacha - by 蒼時弦也</title>
+    <meta name="description" content="利用 AI 生成類似手遊的卡片，這東西比課金抽卡刺激多了！">
   </head>
   <body class="text-red-700 bg-zinc-900 font-cubic11">
     <main id="app" class="flex flex-col md:flex-row justify-center items-center container mx-auto px-4 my-6 space-y-8 md:space-x-8" data-controller="gacha config" data-action="config:tokenChanged->gacha#setupClient">
